# Project-Thermostat-Valve

./: CMakeLists.txt  README.md  makefile
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
component/: component.cpp  component.hpp
date/: date.cpp  date.hpp
room/: room.cpp  room.hpp
room_manager/: room_manager.cpp  room_manager.hpp
scheduler/: scheduler.cpp  scheduler.hpp
sensor/: sensor.cpp  sensor.hpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/: main.cpp
thermostat/: thermostat.cpp  thermostat.hpp
valve/: valve.cpp  valve.hpp
